--- a/docs/net/evmodder/EvLib/extras/TellrawUtils.Component.html
+++ b/docs/net/evmodder/EvLib/extras/TellrawUtils.Component.html
@@ -90,7 +90,7 @@ loadScripts(document, 'script');</script>
 <!-- ======== START OF CLASS DATA ======== -->
 <div class="header">
 <div class="sub-title"><span class="package-label-in-type">Package</span>&nbsp;<a href="package-summary.html">net.evmodder.EvLib.extras</a></div>
-<h1 title="Class TellrawUtils.Component" class="title">Class TellrawUtils.Component</h1>
+<h1 title="Class Component" class="title">Class Component</h1>
 </div>
 <div class="inheritance" title="Inheritance Tree"><a href="https://docs.oracle.com/en/java/javase/18/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">java.lang.Object</a>
 <div class="inheritance">net.evmodder.EvLib.extras.TellrawUtils.Component</div>
